# FramePilotAI

./: .gitignore  README.md  build.gradle.kts  framepilot_ai_chien_luoc_tong_the.md  pnpm-lock.yaml  pnpm-workspace.yaml  run-all.sh  settings.gradle.kts
apps/desktop-ui/: index.html  package.json  vite.config.js
apps/desktop-ui/src/: App.tsx  styles.css
apps/desktop-ui/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-ui/src-tauri/resources/backend/: README.md
apps/desktop-ui/src-tauri/resources/configs/: framepilot.desktop.sample.yml
apps/desktop-ui/src-tauri/src/: main.rs
apps/desktop-ui/src/components/: ActionCard.tsx
apps/desktop-ui/src/lib/: api.ts  types.ts
apps/local-server/: build.gradle.kts
apps/local-server/src/main/java/com/framepilotai/server/: FramePilotAiApplication.java
apps/local-server/src/main/java/com/framepilotai/server/application/: AgentCoordinatorService.java  DeviceIntelligenceAgentService.java  ProjectManagerService.java  (+6 more)
apps/local-server/src/main/resources/: application.yml  logback-spring.xml  schema.sql
configs/: application.local.yml  framepilot.env.example
configs/models/: README.md
configs/presets/: balanced.yml  eco.yml  quality.yml
docs/architecture/: hld.md  module-breakdown.md  overview.md
docs/decisions/: ADR-0001-local-first-stability.md
docs/operations/: runbook.md
docs/qa/: test-matrix.md
docs/release/: changelog.md  release-plan.md
scripts/: bootstrap.ps1  build-all.ps1  package-windows.ps1  provision-ffmpeg.ps1  run-dev.ps1  smoke-test.ps1  test-all.ps1
scripts/lib/: framepilot-common.ps1
(+115 files in other folders)
