[package]
name = "framepilot-ai-desktop"
version = "0.1.0"
description = "FramePilot AI desktop shell"
authors = ["FramePilot AI"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }

[features]
default = []
